// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dupe1.js - flow-verify 1`] = `
/**
 * Dupe provider 1/2
 * @providesModule Dupe
 * @flow
 */
module.exports = "dupe1";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Dupe provider 1/2
 * @providesModule Dupe
 * @flow
 */
module.exports = "dupe1";

`;

exports[`dupe2.js - flow-verify 1`] = `
/**
 * Dupe provider 2/2
 * @providesModule Dupe
 * @flow
 */
module.exports = "dupe2";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Dupe provider 2/2
 * @providesModule Dupe
 * @flow
 */
module.exports = "dupe2";

`;

exports[`requires_dupe.js - flow-verify 1`] = `
/**
 * depends on doubly-provided module
 * @flow
 */
var dupe = require('Dupe');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * depends on doubly-provided module
 * @flow
 */
var dupe = require("Dupe");

`;
